[package]
name = "orange-whale"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clokwerk = "0.4.0"
env_logger = "0.11.9"
log = "0.4.29"
rpgpie = "0.9.0"
tar = "0.4.44"
teloxide = "0.17.0"
tokio = { version = "1.49.0", features = ["macros"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
